# ChangeLog for dev-haskell/filepath
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/filepath/ChangeLog,v 1.17 2008/10/04 19:52:29 fmccor Exp $

  04 Oct 2008; Ferris McCormick <fmccor@gentoo.org> filepath-1.1.0.0.ebuild:
  Sparc stable, part of Bug #239368.

  15 Jul 2008; Jeroen Roovers <jer@gentoo.org> filepath-1.1.0.0.ebuild:
  Marked ~hppa too.

  06 Jul 2008; Markus Meier <maekke@gentoo.org> filepath-1.1.0.0.ebuild:
  amd64/x86 stable, bug #230919

  01 Mar 2008; Raúl Porcel <armin76@gentoo.org> filepath-1.1.0.0.ebuild:
  Add ~alpha

*filepath-1.1.0.0 (13 Dec 2007)

  13 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> +filepath-1.1.0.0.ebuild:
  New version.

  12 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> filepath-1.0.ebuild:
  Remove old comment.

  12 Dec 2007; Ferris McCormick <fmccor@gentoo.org> filepath-1.0.ebuild:
  Sparc stable, Bug #201984, and needed for ghc.

  26 Nov 2007; Jeroen Roovers <jer@gentoo.org> filepath-1.0.ebuild:
  Stable for HPPA (dev-lang/ghc-6.6.1).

  14 Nov 2007; Steve Dibb <beandog@gentoo.org> filepath-1.0.ebuild:
  amd64 stable, bug 196616

  05 Nov 2007; Duncan Coutts <dcoutts@gentoo.org> filepath-1.0.ebuild:
  Added ~ppc to keywords

  28 Oct 2007; Lennart Kolmodin <kolmodin@gentoo.org> filepath-1.0.ebuild:
  Stricten dependency of virtual/ghc into dev-lang/ghc as otherwise ghc-bin
  was pulled in for users trying to 'emerge ghc' which then caused ghc
  conflict.

  23 Oct 2007; Christian Faulhammer <opfer@gentoo.org> filepath-1.0.ebuild:
  stable x86, bug 196616

  29 Aug 2007; Jeroen Roovers <jer@gentoo.org> filepath-1.0.ebuild:
  Marked ~hppa (bug #187147).

  05 Aug 2007; Lennart Kolmodin <kolmodin@gentoo.org> filepath-1.0.ebuild:
  Set the CABAL_CORE_LIB_GHC_PV to 6.6.1, ie. this package is bundled with
  that GHC version.

  27 Jul 2007; Lennart Kolmodin <kolmodin@gentoo.org> filepath-1.0.ebuild:
  Add profile USE flag and sync KEYWORDS with the overlay.