@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/filepath/filepath-1.1.0.0.ebuild,v 1.5 2008/10/04 19:52:29 fmccor Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/filepath/filepath-1.1.0.0.ebuild,v 1.6 2009/08/01 15:32:54 kolmodin Exp $
 
 CABAL_FEATURES="haddock lib profile"
 inherit haskell-cabal
