@@ -1,6 +1,12 @@
 # ChangeLog for dev-haskell/filepath
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/filepath/ChangeLog,v 1.17 2008/10/04 19:52:29 fmccor Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/filepath/ChangeLog,v 1.18 2009/08/01 15:32:54 kolmodin Exp $
+
+*filepath-1.1.0.2 (01 Aug 2009)
+
+  01 Aug 2009; Lennart Kolmodin <kolmodin@gentoo.org>
+  +filepath-1.1.0.2.ebuild:
+  Version bump, and add ~ppc to one older version.
 
   04 Oct 2008; Ferris McCormick <fmccor@gentoo.org> filepath-1.1.0.0.ebuild:
   Sparc stable, part of Bug #239368.
